<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/brand"
        android:layout_marginTop="86dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/lampada"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/brand"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/robotomedium"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@id/title"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/robotolight"
        android:text="@string/subtitle"
        android:gravity="center"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:layout_marginHorizontal="20dp">

        <Button
            android:id="@+id/signup"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/robotomedium"
            android:textSize="16sp"
            android:text="@string/signup"
            android:textColor="@color/coral"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_buttonwhite"/>

        <Button
            android:id="@+id/login"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/robotomedium"
            android:textSize="16sp"
            android:text="@string/login"
            android:textColor="@color/coral"
            android:layout_marginLeft="10dp"
            android:background="@drawable/background_buttonwhite"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bolinha1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/bolinha1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bolinha2"/>

    </LinearLayout>

</RelativeLayout>