<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/pale_grey">

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/background_headerprofile"/>

    <ImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/menu"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/profile"
        android:fontFamily="@font/robotomedium"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/avatar_diver"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_below="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="John Bergen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textColor="@color/coral"
        android:fontFamily="@font/robotolight"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/city"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:text="New York, NY"
        android:textColor="@color/coral"
        android:textSize="16sp"
        android:fontFamily="@font/robotolight"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:layout_marginTop="17dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/titleAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:fontFamily="@font/robotolight"
            android:textColor="@color/coral"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleAbout"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/robotolight"
            android:gravity="center"
            android:textColor="@color/warm_grey"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
            android:textSize="16sp"
            android:lineHeight="24sp"/>

        <LinearLayout
            android:id="@+id/boxSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/twitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/twitter_logo_button_2"/>

            <ImageButton
                android:id="@+id/instagram"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/capa_1"/>

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/facebook_logo_button_2"/>

            <ImageButton
                android:id="@+id/google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:src="@drawable/google_plus_logo_button"/>

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/boxSocial"
            android:background="@color/light_grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_below="@id/line"
            android:background="@color/ultra_light_grey"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="18dp"
                    android:id="@+id/photos"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="953"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:gravity="center"/>
                <TextView
                    android:layout_below="@id/photos"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:id="@+id/textPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Photos"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/warm_grey"
                    android:textSize="10sp"
                    android:gravity="center"/>

            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginTop="29dp"
                android:background="@color/light_grey"/>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="18dp"
                    android:id="@+id/followers"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="58K"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:gravity="center"/>
                <TextView
                    android:layout_below="@id/followers"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:id="@+id/textFollowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Followers"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/warm_grey"
                    android:textSize="10sp"
                    android:gravity="center"/>

            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginTop="29dp"
                android:background="@color/light_grey"/>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="18dp"
                    android:id="@+id/following"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="326"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:gravity="center"/>
                <TextView
                    android:layout_below="@id/following"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:id="@+id/textFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Following"
                    android:fontFamily="@font/robotolight"
                    android:textColor="@color/warm_grey"
                    android:textSize="10sp"
                    android:gravity="center"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/addToFriends"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/background_gradientbutton"
        android:text="@string/add_to_friends"
        android:textColor="@color/white"
        android:fontFamily="@font/robotomedium"
        android:textSize="14sp"/>

</RelativeLayout>